--- a/src/style.css
+++ b/src/style.css
@@ -51,3 +51,49 @@ li {
 #explanation {
     margin-top: 0px;
 }
+
+#loader {
+    margin-right: 25px;
+    border: 8px solid #f3f3f3;
+    border-top: 8px solid saddlebrown;
+    border-radius: 50%;
+    width: 85px;
+    height: 85px;
+    animation: spin 2s linear infinite;
+    float: right;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+
+/* The reload button */
+#reload {
+    margin-top: 25px;
+    margin-right: 25px;
+    float: right;
+    color: antiquewhite;
+    font-size: 30px;
+
+}
+
+#reload:link {
+    text-decoration: none;
+}
+
+#reload:visited {
+    text-decoration: none;
+}
+
+#reload:hover {
+    text-decoration: none;
+}
+
+#reload:active {
+    text-decoration: none;
+}
+
+h3 {
+    margin: 0px 10px 0px 10px;
+}
