--- a/src/style.css
+++ b/src/style.css
@@ -68,8 +68,8 @@ li {
     100% { transform: rotate(360deg); }
 }
 
-/* The reload button */
-#reload {
+/* The Back button */
+#back {
     margin-top: 25px;
     margin-right: 25px;
     float: right;
@@ -78,19 +78,19 @@ li {
 
 }
 
-#reload:link {
+#back:link {
     text-decoration: none;
 }
 
-#reload:visited {
+#back:visited {
     text-decoration: none;
 }
 
-#reload:hover {
+#back:hover {
     text-decoration: none;
 }
 
-#reload:active {
+#back:active {
     text-decoration: none;
 }
 
