Started the javascript side of the TH by renaming some files and creating a new page for the user to enter their name

--- a/src/style.css
+++ b/src/style.css
@@ -1,9 +1,9 @@
-:root {
-    --pop-up: block;
+* {
+    font-family: Cascadia Code, serif;
 }
 
-* {
-    font-family: Cascadia Code;
+:root {
+    --pop-up: block;
 }
 
 header {
