--- a/stylesheet.css
+++ b/stylesheet.css
@@ -106,11 +106,11 @@ The following are for the about page
  */
 
 #Names{
-    color: grey;
+    color: #242526;
 }
 
 .Names{
-    color: grey;
+    color: #242526;
 }
 
 footer{
@@ -128,4 +128,4 @@ footer{
     left: 1400px;
 }
 
-functiom Start
+
