--- a/src/style.css
+++ b/src/style.css
@@ -206,3 +206,18 @@ h3 {
 #trueIntAns, #trueNumAns, #trueTextAns {
     margin-bottom: 10px;
 }
+
+table {
+    border: 1px solid black;
+    text-align: center;
+    font-size: x-large;
+    padding: 5px;
+}
+
+th {
+    border: 1px solid black;
+}
+
+td {
+    border: 1px solid black;
+}
