--- a/src/style.css
+++ b/src/style.css
@@ -209,6 +209,10 @@ h3 {
     margin-bottom: 10px;
 }
 
+#leaderboardDiv {
+    text-align: center;
+}
+
 table {
     border: 2px solid #7A3803;
     text-align: center;
@@ -218,8 +222,10 @@ table {
 
 th {
     border: 2px solid #7A3803;
+    padding: 5px;
 }
 
 td {
     border: 2px solid #7A3803;
+    padding: 5px;
 }
