--- a/stylesheet.css
+++ b/stylesheet.css
@@ -14,6 +14,38 @@ body {
 
 
 }
+
+header {
+    height: 100px;
+    max-width: 100%;
+    background-image: url("src/images.jpg");
+}
+
+/* The Back button */
+#back, #reload {
+    margin-top: 25px;
+    margin-right: 25px;
+    float: right;
+    color: antiquewhite;
+    font-size: 30px;
+}
+
+#back:link, #reload:link {
+    text-decoration: none;
+}
+
+#back:visited, #reload:link {
+    text-decoration: none;
+}
+
+#back:hover, #reload:link {
+    text-decoration: none;
+}
+
+#back:active, #reload:link {
+    text-decoration: none;
+}
+
 #header {
     padding: 20px;
     text-align: center;
