--- a/stylesheet.css
+++ b/stylesheet.css
@@ -224,6 +224,7 @@ button:hover {
     padding: 20px;
 }
 
+/* when the width is 420px then the letters size is medium */
 @media screen and (max-width: 420px) {
     #Start {
         font-size: medium;
