--- a/src/style.css
+++ b/src/style.css
@@ -187,6 +187,10 @@ h3 {
     font-size: xx-large;
 }
 
+#qDisplay {
+    float: right;
+}
+
 /* For mobile phones */
 @media screen and (max-width: 600px) {
     #back, #reload, #QRcode {
