--- a/src/style.css
+++ b/src/style.css
@@ -119,7 +119,12 @@ body {  /* The body tag of all pages */
     font-size: xx-large;
 }
 
-
+#hint{
+    background-color: darkgray;
+    border-radius: 25px;
+    padding: 20px;
+    font-size: 25px;
+}
 
 /* The Header buttons */
 #back, #reload, #QRcode {
@@ -300,6 +305,3 @@ td {
     }
 }
 
-#hint{
-    font-size: 30px;
-}
