--- a/src/style.css
+++ b/src/style.css
@@ -84,6 +84,7 @@ body {  /* The body tag of all pages */
     margin-left: auto;
     margin-right: auto;
     border-radius: 40px;
+    padding-bottom: 50px;
 }
 
 #tutorial {
@@ -123,6 +124,20 @@ body {  /* The body tag of all pages */
     font-size: 25px;
 }
 
+input[type=submit] {
+    border: 1px solid dimgrey;
+    background-color: black;
+    color: navajowhite;
+    padding: 20px;
+    text-align: center;
+    border-radius: 25px;
+    font-size: x-large;
+}
+
+input[type=text] {
+    width: 150px;
+}
+
 /* The Header buttons */
 #back, #reload, #QRcode {
     margin-top: 40px;
@@ -130,6 +145,7 @@ body {  /* The body tag of all pages */
     float: right;
     color: antiquewhite;
     font-size: 30px;
+    cursor: pointer;
 }
 
 #QRcode {
@@ -169,7 +185,6 @@ h3 {
     color: navajowhite;
     padding: 10px;
     text-align: center;
-    width: 50px;
     border-radius: 25px;
 }
 
@@ -179,7 +194,6 @@ h3 {
     color: navajowhite;
     padding: 10px;
     text-align: center;
-    width: 50px;
     border-radius: 25px;
 }
 
@@ -187,6 +201,7 @@ h3 {
     margin-top: 50px;
     margin-bottom: 20px;
     font-size: xx-large;
+    color: red;
 }
 
 #qDisplay {
@@ -271,13 +286,11 @@ td {
 #cameraBox {
     position: absolute;
     background-color: white;
-    height: 300px;
+    height: 400px;
     width: 400px;
     border: black 6px solid;
     margin: 100px 10px;
     text-align: center;
-
-
 }
 
 /* Leaderboard for small mobile phones */
@@ -306,3 +319,17 @@ td {
     display: none;
 }
 
+
+#Contribution{
+    background-color: darkgray;
+    border: 1px solid black;
+    border-radius: 25px;
+    padding: 20px;
+}
+
+#Names1{
+    background-color: darkgray;
+    border: 1px solid black;
+    border-radius: 25px;
+    padding: 20px;
+}
