--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,234 +1,32 @@
-* {
-    font-family: Times, "Times New Roman", Georgia, serif;
-}
-
-/*Background placement*/
-body {
-    margin: 0px;
-    padding: 0px;
-    background-size: cover;
-    background-position: center;
-    min-height: 100vh;
-    display: grid;
-    grid-template-rows: auto 1fr auto;
-    background-image: url("download.jpg");
-
-}
-
-/*Black wood background for only the header*/
-#black-background{
-    height: 100px;
-    max-width: 100%;
-    background-image: url("src/images.jpg");
-}
-
-#headerr {
-    padding: 20px;
-    text-align: center;
-}
-
-#footer {
-    padding: 20px;
-    text-align: center;
-}
-
-/* The Back button */
-#back, #reload {
-    margin-top: 25px;
-    margin-right: 25px;
-    float: right;
-    color: antiquewhite;
-    font-size: 30px;
-}
-
-#back:link, #reload:link {
-    text-decoration: none;
-}
-
-#back:visited, #reload:link {
-    text-decoration: none;
-}
-
-#back:hover, #reload:link {
-    text-decoration: none;
-}
-
-#back:active, #reload:link {
-    text-decoration: none;
-}
-
-
-
-#title {
-    font-size: 50px;
-    font-weight: bold;
-}
-
-#main-content {
-    background-size: cover;
-    background-position: center;
-    padding: 40px;
-    text-align: center;
-}
-
-#welcome-message, #description {
-    color: black;
-    font-weight: bold;
-}
-
-
-/*About button customization*/
-#about-button{
-    background-color: darkgray;
-    color: black;
-    background-size: 100px;
-    position: center;
+#username {
+    margin-top: 10px;
     padding: 10px;
-    border: 2px solid black;
-    border-radius: 40px;
-    width: 100px;
-    height: 70px;
-    font-size: large;
+    border: none;
+    border-bottom: 2px solid black;
 }
 
-
-#about-button:link {
-    text-decoration: none;
-}
-
-#about-button:visited {
-    text-decoration: none;
-}
-
-#about-button:hover {
-    text-decoration: none;
-}
-
-#about-button:active {
-    text-decoration: none;
-}
-
-/*Start button customization*/
-#Start {
-    background-color: darkgray;
-    margin-left: 0px;
-    background-size: 100px;
-    position: center;
-    border: 2px solid black;
-    border-radius: 15px 50px;
-    color: black;
-    height: 150px;
-    width: 200px;
-    padding: 30px;
-    font-size: xx-large;
-
-}
-
-#Start:link {
-    text-decoration: none;
-}
-
-#Start:visited {
-    text-decoration: none;
-}
-
-#Start:hover {
-    text-decoration: none;
-}
-
-#Start:active {
-    text-decoration: none;
-}
-
-
-
-
-#copyright {
-    color: steelblue;
-}
-
-
-body {
-    font-family: Arial, sans-serif;
-    background-color: #F5F5F5;
-    margin: 0;
-    padding: 0;
-}
-
-
-.container {
-    max-width: 600px;
-    margin: 0 auto;
-    padding: 40px;
-    background-color: #FFF;
-    box-shadow: 0px 0px 20px #888888;
-    border-radius: 10px;
-    text-align: center;
-}
-
-
-h1 {
-    font-size: 36px;
-    color: #333;
-    margin-top: 0;
-    margin-bottom: 20px;
-}
-
-input[type=text] {
+#start-quiz {
+    margin-top: 10px;
     padding: 10px;
-    font-size: 16px;
-    border: 2px solid #ddd;
-    border-radius: 5px;
-    margin-bottom: 20px;
-    width: 100%;
-    box-sizing: border-box;
-}
-
-
-button {
     background-color: #4CAF50;
     color: white;
-    font-size: 16px;
-    padding: 12px 20px;
     border: none;
-    border-radius: 5px;
     cursor: pointer;
-    transition: background-color 0.3s;
-    width: 100%;
-    box-sizing: border-box;
 }
 
-
-button:hover {
-    background-color: #3e8e41;
-}
-
-#greeting {
-    font-size: 24px;
-    color: #333;
-    margin-top: 20px;
-    margin-bottom: 0;
+#response-message {
+    margin-top: 10px;
+    padding: 10px;
     display: none;
 }
 
-
-#Contribution{
-    background-color: darkgray;
-    border: 1px solid black;
-    border-radius: 25px;
-    padding: 20px;
+#response-message.success {
+    background-color: #5cb85c;
+    color: white;
 }
 
-#Names1{
-    background-color: darkgray;
-    border: 1px solid black;
-    border-radius: 25px;
-    padding: 20px;
+#response-message.error {
+    background-color: #d9534f;
+    color: white;
 }
 
-/* when the width is 420px then the letters size is medium */
-@media screen and (max-width: 420px) {
-    #Start {
-        font-size: small;
-    }
-}
