--- a/src/style.css
+++ b/src/style.css
@@ -338,3 +338,10 @@ td {
     border-radius: 25px;
     padding: 20px;
 }
+
+#testBody h3 {
+    margin-top: 80px;
+}
+#testBody div ul {
+    list-style: none;
+}
